responsiveness for footer section on mobile devices fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
 /* padding: 2rem; */
 /* text-align: center; */
 /* } */
+:root {
+  font-size: 16px;
+}
 * {
   margin: 0;
   padding: 0;
