--- a/src/components/Flexible/flexible.module.css
+++ b/src/components/Flexible/flexible.module.css
@@ -92,4 +92,20 @@
   .flexibleTexth2 {
     font-size: 30px;
   }
+  .imgContainer1 p,
+  .imgContainer2 p,
+  .imgContainer3 p,
+  .imgContainer4 p {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 440px) {
+  .imgContainer1 p,
+  .imgContainer2 p,
+  .imgContainer3 p,
+  .imgContainer4 p {
+    font-size: 14px;
+    line-height: 18px;
+    top: 10px;
+  }
 }
