--- a/src/components/MinimumLivingCost/minimumlivingcost.module.css
+++ b/src/components/MinimumLivingCost/minimumlivingcost.module.css
@@ -17,6 +17,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+}
+.imageAndFeatures img{
+  width: 100%;
 }
 @media screen and (max-width: 1200px) {
   .minimumlivingcost{
